# data_simulation

./: README.md
data_simulation/: CMakeLists.txt  README.md
data_simulation/fd_main/: CMakeLists.txt  fd_main.cpp  main.cpp  out.json
data_simulation/fd_main/include/: fd_main.h
data_simulation/jiqiu/: CMakeLists.txt  out.json  readme.md
data_simulation/jiqiu/view_modify_data/: drv_set_query.cpp  drv_set_query.h  main.cpp
data_simulation/jiqiu/任务功能需求说明/: .~仿真数据管理.docx  仿真数据管理需求说明.docx
data_simulation/json_config/: aaa.json  config_main  config_main.cpp  dev_json.cpp  dev_json.h  makefile  out.json
data_simulation/json_config/main_test/: main  main.cpp  makefile
data_simulation/player/: CMakeLists.txt  canplayer.c  canplayer.h  filename.cpp  filename.h  lib.c  lib.h  player.cpp  player.h  pty.cpp  pty.h  raw.h
data_simulation/sim_root/: out.json  sim_cfg.json
data_simulation/sim_root/usart/: out.json
